<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#fff"
    >
    /////android:background="@color/background_color"
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
        <LinearLayout
            android:id="@+id/iconLayoutHigh"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            >
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                >
                <ImageView
                    android:id="@+id/imageMedical"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/medical"

                    android:background="@drawable/circle"
                    android:layout_centerHorizontal="true"
                    android:padding="12dp"
                    android:tag="medical"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/imageMedical"
                    android:layout_centerHorizontal="true"
                    android:text="@string/medicalString"
                    android:textSize="20sp"
                    android:textColor="#000"
                    android:textStyle="bold"
                    />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                >
                <ImageView
                    android:id="@+id/imageEconomic"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/economic"
                    app:tint="#000"
                    android:background="@drawable/circle"
                    android:layout_centerHorizontal="true"
                    android:padding="20dp"
                    android:tag="economic"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/imageEconomic"
                    android:layout_centerHorizontal="true"
                    android:text="@string/economicStr"
                    android:textSize="20sp"
                    android:textColor="#000"
                    android:textStyle="bold"
                    />
            </RelativeLayout>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/iconLayoutCenter"
            app:layout_constraintTop_toBottomOf="@+id/iconLayoutHigh"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"

            >
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                >
                <ImageView
                    android:id="@+id/imageEducation"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/education"
                    android:background="@drawable/circle"
                    android:layout_centerHorizontal="true"
                    android:padding="8dp"
                    android:tag="education"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/imageEducation"
                    android:layout_centerHorizontal="true"
                    android:text="@string/EducationString"
                    android:textSize="15sp"
                    android:textColor="#000"
                    android:textStyle="bold"
                    />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                >
                <ImageView
                    android:id="@+id/imageManagement"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/manage"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/circle"
                    android:padding="12dp"
                    android:tag="management"
                    />
                <TextView
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/imageManagement"
                    android:layout_centerHorizontal="true"
                    android:text="@string/manageStr"
                    android:textSize="12sp"
                    android:textColor="#000"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                >
                <ImageView
                    android:id="@+id/imageMedicine"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/medicine"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/circle"
                    app:tint="#000"
                    android:padding="20dp"
                    android:tag="medicine"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/imageMedicine"
                    android:layout_centerHorizontal="true"
                    android:text="@string/medicineStr"
                    android:textSize="13sp"
                    android:textColor="#000"
                    android:textStyle="bold"
                    />
            </RelativeLayout>

        </LinearLayout>
        <LinearLayout
            app:layout_constraintTop_toBottomOf="@+id/iconLayoutCenter"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            >

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                >
                <ImageView
                    android:id="@+id/imagePsyology"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/psycology"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/circle"
                    app:tint="#000"
                    android:padding="20dp"
                    android:tag="psycology"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/imagePsyology"
                    android:layout_centerHorizontal="true"
                    android:text="@string/psycologyStr"
                    android:textSize="20sp"
                    android:textColor="#000"
                    android:textStyle="bold"
                    />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                >
                <ImageView
                    android:id="@+id/imageTourism"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/tourism"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/circle"
                    android:padding="10dp"
                    android:tag="tourism"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/imageTourism"
                    android:layout_centerHorizontal="true"
                    android:text="@string/tourismStr"
                    android:textSize="20sp"
                    android:textColor="#000"
                    android:textStyle="bold"
                    />
            </RelativeLayout>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>